[package]
name = "secret_sauce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
bcrypt = "0.14"
rpassword = "7.2.0"
aes-gcm = "0.10.1"
pbkdf2 = "0.12.1"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10.6"
rand = "0.8.5"
colored = "2.0.0"
