[package]
name = "secret-sauce"
authors = ["Muhammad Sarim <m2sarim.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A CLI password manager"
readme = "README.md"
homepage = "https://github.com/SarimDEV/secret-sauce"
repository = "https://github.com/SarimDEV/secret-sauce"
keywords = ["cli", "password", "manager"]
categories = ["command-line-utilities"]
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
bcrypt = "0.14"
rpassword = "7.2.0"
aes-gcm = "0.10.1"
pbkdf2 = "0.12.1"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10.6"
rand = "0.8.5"
colored = "2.0.0"
